--- a/baseline_model.ipynb
+++ b/baseline_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "8d64f904",
    "metadata": {},
    "outputs": [
@@ -14,7 +14,7 @@
        "<PIL.Image.Image image mode=RGB size=200x200>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "id": "56f7405f",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "True"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "id": "9a0a6df6",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
+   "id": "85ca28f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('tree_class.json', 'r') as trees:\n",
+    "    data = json.load(trees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "05bf6d04",
    "metadata": {},
    "outputs": [],
@@ -105,13 +118,12 @@
     "model_clip = model_clip.to(device).eval()\n",
     "\n",
     "# --- 2. Классы (замени на свои) ---\n",
-    "classes = [\"birch tree\", \"oak tree\", \"pine tree\", \"maple tree\", \"spruce tree\"]\n",
+    "classes = list(data.keys())\n",
     "\n",
     "# --- 3. Подготовка текстов ---\n",
     "text_tokens = tokenizer(classes).to(device)\n",
     "\n",
     "# --- 4. Подготовка изображения ---\n",
-    "# masked_pil = Image.open(\"birch.jpg\").convert(\"RGB\")\n",
     "image_tensor = preprocess(masked_pil).unsqueeze(0).to(device)\n",
     "\n",
     "# --- 5. Получение эмбеддингов ---\n",
@@ -130,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "id": "f2104756",
    "metadata": {},
    "outputs": [
@@ -138,13 +150,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "birch tree     : 0.329\n",
-      "oak tree       : 0.481\n",
-      "pine tree      : 0.005\n",
-      "maple tree     : 0.123\n",
-      "spruce tree    : 0.062\n",
+      "Silver Birch   : 0.599\n",
+      "Horse Chestnut : 0.034\n",
+      "Small-leaved Lime: 0.002\n",
+      "Norway Maple   : 0.036\n",
+      "Box Elder      : 0.000\n",
+      "Rowan          : 0.315\n",
+      "English Oak    : 0.015\n",
       "\n",
-      "Predicted: oak tree\n"
+      "Predicted: Silver Birch\n"
      ]
     },
     {
